--- a/index.html
+++ b/index.html
@@ -275,20 +275,20 @@
 <label for="pais">2️⃣ ¿De qué país nos visitas?<span class="required-asterisk">*</span></label>
 <select id="pais" name="pais" required onchange="updatePhoneInput()">
     <option value="" disabled selected hidden>Selecciona un país</option>
-    <option value="Colombia" data-prefijo="+57" data-bandera="🇨🇴">Colombia</option>
-    <option value="México" data-prefijo="+52" data-bandera="🇲🇽">México</option>
-    <option value="Perú" data-prefijo="+51" data-bandera="🇵🇪">Perú</option>
-    <option value="Ecuador" data-prefijo="+593" data-bandera="🇪🇨">Ecuador</option>
-    <option value="Chile" data-prefijo="+56" data-bandera="🇨🇱">Chile</option>
-    <option value="Bolivia" data-prefijo="+591" data-bandera="🇧🇴">Bolivia</option>
-    <option value="Guatemala" data-prefijo="+502" data-bandera="🇬🇹">Guatemala</option>
-    <option value="El Salvador" data-prefijo="+503" data-bandera="🇸🇻">El Salvador</option>
-    <option value="Argentina" data-prefijo="+54" data-bandera="🇦🇷">Argentina</option>
-    <option value="Venezuela" data-prefijo="+58" data-bandera="🇻🇪">Venezuela</option>
-    <option value="Honduras" data-prefijo="+504" data-bandera="🇭🇳">Honduras</option>
-    <option value="Uruguay" data-prefijo="+598" data-bandera="🇺🇾">Uruguay</option>
-    <option value="Costa Rica" data-prefijo="+506" data-bandera="🇨🇷">Costa Rica</option>
-    <option value="Otro País" data-prefijo="" data-bandera="🌎">Otro País</option>
+    <option value="Colombia" data-prefijo="+57" data-bandera="🇨🇴">🇨🇴 Colombia</option>
+    <option value="México" data-prefijo="+52" data-bandera="🇲🇽">🇲🇽 México</option>
+    <option value="Perú" data-prefijo="+51" data-bandera="🇵🇪">🇵🇪 Perú</option>
+    <option value="Ecuador" data-prefijo="+593" data-bandera="🇪🇨">🇪🇨 Ecuador</option>
+    <option value="Chile" data-prefijo="+56" data-bandera="🇨🇱">🇨🇱 Chile</option>
+    <option value="Bolivia" data-prefijo="+591" data-bandera="🇧🇴">🇧🇴 Bolivia</option>
+    <option value="Guatemala" data-prefijo="+502" data-bandera="🇬🇹">🇬🇹 Guatemala</option>
+    <option value="El Salvador" data-prefijo="+503" data-bandera="🇸🇻">🇸🇻 El Salvador</option>
+    <option value="Argentina" data-prefijo="+54" data-bandera="🇦🇷">🇦🇷 Argentina</option>
+    <option value="Venezuela" data-prefijo="+58" data-bandera="🇻🇪">🇻🇪 Venezuela</option>
+    <option value="Honduras" data-prefijo="+504" data-bandera="🇭🇳">🇭🇳 Honduras</option>
+    <option value="Uruguay" data-prefijo="+598" data-bandera="🇺🇾">🇺🇾 Uruguay</option>
+    <option value="Costa Rica" data-prefijo="+506" data-bandera="🇨🇷">🇨🇷 Costa Rica</option>
+    <option value="Otro País" data-prefijo="" data-bandera="🌎">🌎 Otro País</option>
 </select>
 
             <div class="form-group">
