--- a/index.html
+++ b/index.html
@@ -209,23 +209,23 @@
 /* Estilo para el elemento que contendrá el emoji y prefijo */
 /* **MODIFICADO para asegurar que las esquinas coincidan con el input** */
 #flag-prefix-display {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 54px;
-    line-height: 54px; /* Centra verticalmente */
-    padding: 0 10px;
-    color: black;
-    font-size: 19px;
-    font-weight: normal;
-    pointer-events: none;
-    background: transparent;
-    z-index: 10;
-    border-right: none;
-    white-space: nowrap;
-    /* Copiamos el radio de borde del input subyacente para la esquina izquierda */
-    border-top-left-radius: 5px; 
-    border-bottom-left-radius: 5px;
+    position: absolute;
+    top: 1px; /* Añadido: Baja 1px para centrarse mejor dentro del borde del input */
+    left: 0;
+    height: 52px; /* Reducido: Compensamos el 1px de top y el borde inferior */
+    line-height: 52px; /* Ajustado para nueva altura */
+    padding: 0 10px;
+    color: black;
+    font-size: 19px;
+    font-weight: normal;
+    pointer-events: none;
+    background-color: white; /* *** CLAVE AÑADIDO: Damos fondo blanco solo al prefijo, si el input lo oculta *** */
+    z-index: 100; /* *** AUMENTADO: Garantizamos que esté sobre cualquier otro elemento *** */
+    border-right: none;
+    white-space: nowrap;
+    /* Copiamos el radio de borde del input subyacente para la esquina izquierda */
+    border-top-left-radius: 5px; 
+    border-bottom-left-radius: 5px;
 }
 </style>
 </head>
