--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-s0cale=1.0">
     <title>Bienvenida a la Comunidad</title>
 <style>
-    /* --- ESTILOS GENERALES Y AJUSTABLES --- */
+    /* --- ESTILOS GENERALES Y AJUSTABLES/* Contenedor del campo de teléfono */ --- */
     html, body {
         min-height: 100%;
     }
@@ -190,46 +190,52 @@
     }
 
 /* *** ESTILOS CLAVE AÑADIDOS/MODIFICADOS PARA EL INPUT DE TELÉFONO *** */
-    /* Contenedor del campo de teléfono */
-    .phone-input-container {
-        position: relative;
-        width: 100%; 
-        margin-bottom: 30px; /* Para mantener el espaciado entre preguntas */
-        height: 54px;
-    }
+/* Contenedor del campo de teléfono */
+.phone-input-container {
+    position: relative;
+    width: 100%; 
+    margin-bottom: 30px; /* Para mantener el espaciado entre preguntas */
+    height: 54px;
+    /* CLAVE: Le damos el estilo de input al contenedor y ocultamos los bordes internos */
+    border: 1px solid black; 
+    border-radius: 5px;
+    background-color: white;
+    padding: 0; /* Aseguramos que no haya padding */
+}
 
 /* El campo de input en sí */
 .form-group input[type="tel"] {
     /* Se mantiene el height y line-height de 54px para el centrado vertical */
-    margin-bottom: 0; /* Eliminamos el margen duplicado del estilo general */
-    /* CLAVE: Quitamos el borde izquierdo y radio para que el prefijo lo reemplace visualmente */
-    border-left: none; 
-    border-top-left-radius: 0;
-    border-bottom-left-radius: 0;
+    margin-bottom: 0;
+    /* CLAVE: Eliminamos todos los bordes y el fondo ya que los tiene el contenedor */
+    border: none;
+    background: transparent;
+    border-radius: 0;
     /* CLAVE: Espacio para el prefijo + bandera. Ajuste a 125px */
     padding-left: 125px; 
 }
 
 /* Estilo para el elemento que contendrá el emoji y prefijo */
-/* **MODIFICADO para asegurar que las esquinas coincidan con el input** */
+/* CLAVE: Ahora solo aplicamos la línea divisoria (borde derecho) */
 #flag-prefix-display {
-    position: absolute;
-    top: 1px; /* Añadido: Baja 1px para centrarse mejor dentro del borde del input */
-    left: 0;
-    height: 52px; /* Reducido: Compensamos el 1px de top y el borde inferior */
-    line-height: 52px; /* Ajustado para nueva altura */
-    padding: 0 10px;
-    color: black;
-    font-size: 19px;
-    font-weight: normal;
-    pointer-events: none;
-    background-color: white; /* *** CLAVE AÑADIDO: Damos fondo blanco solo al prefijo, si el input lo oculta *** */
-    z-index: 100; /* *** AUMENTADO: Garantizamos que esté sobre cualquier otro elemento *** */
-    border-right: none;
-    white-space: nowrap;
-    /* Copiamos el radio de borde del input subyacente para la esquina izquierda */
-    border-top-left-radius: 5px; 
-    border-bottom-left-radius: 5px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 54px; /* Altura completa */
+    line-height: 54px; /* Centra verticalmente */
+    padding: 0 10px;
+    color: black;
+    font-size: 19px;
+    font-weight: normal;
+    pointer-events: none;
+    background-color: transparent; /* Fondo transparente (el contenedor tiene el blanco) */
+    z-index: 10;
+    white-space: nowrap;
+    
+    /* AÑADIDO: Solo agregamos el borde derecho como separador vertical */
+    border-right: 1px solid black; 
+    width: 115px; /* Ancho fijo para la sección (bandera + prefijo) */
+    text-align: center; /* Centramos el contenido */
 }
 </style>
 </head>
